(executable
  ; (public_name ffxiv_flipper)
  (name testing)
  (preprocess (pps ppx_deriving_yojson))
  (libraries core
  cohttp-lwt-unix
  yojson))

(rule
  (target project.zip)
  (deps 
    src/flipper.ml
    src/market.ml
    src/market.mli
    src/dune
    tests/tests.ml
    tests/dune
  )
  (action
    (run zip -R project.zip %{deps})))