(library
  (name market)
  (modules market)
  (preprocess 
    (pps ppx_deriving_yojson
    bisect_ppx))
  (libraries core
  cohttp-lwt-unix
  yojson))

(executable
  (name flipper)
  (modules flipper)
  (preprocess (pps ppx_deriving_yojson))
  (libraries
    market
    core
    yojson
    ppx_deriving_yojson.runtime))